# pydub

./: API.md  README.md  pyproject.toml
pydub/: audio_segment.py  audio_segment.pyi  effects.py  effects.pyi  generators.pyi  pyaudioop.py  scipy_effects.pyi  silence.pyi  utils.py  utils.pyi
test/: test.py
